optimized css fixed spacing in hero, quote, and cta to conform

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
 
 .info {
   text-align: center;
-  padding: 60px 0;
+  padding: 60px 100px;
 }
 
 .info-heading {
@@ -158,7 +158,7 @@ body {
 
 .quote {
   background-color: var(--secondary-text);
-  padding: 90px 0;
+  padding: 90px 100px;
 }
 
 blockquote {
@@ -189,7 +189,7 @@ blockquote cite {
   background-color: var(--blue);
   color: var(--light-text);
   border-radius: 18px;
-  padding: 36px 20px;
+  padding: 36px 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
